Translate "and" and show correct localized chapter name (#757)
* Translate "and" and show correct localized chapter name

* Update src/templates/ja/2019/base.html

* Allow Written by to be before or after for Japanese

--- a/src/templates/en/2019/base_chapter.html
+++ b/src/templates/en/2019/base_chapter.html
@@ -17,9 +17,12 @@
 {% block comments %}comments{% endblock %}
 {% block queries %}View queries{% endblock %}
 {% block results %}View results{% endblock %}
-{% block written_by %}Written by{% endblock %}
-{% block reviewed_by %}Reviewed by{% endblock %}
-{% block translated_by %}Translated by{% endblock %}
+{% block written_by_before %}Written by{% endblock %}
+{% block reviewed_by_before %}Reviewed by{% endblock %}
+{% block translated_by_before %}Translated by{% endblock %}
+{% block written_by_after %}{% endblock %}
+{% block reviewed_by_after %}{% endblock %}
+{% block translated_by_after %}{% endblock %}
 
 {% block author %}Author{% endblock %}
 {% block authors %}Authors{% endblock %}
