--- a/src/templates/es/2019/base_chapter.html
+++ b/src/templates/es/2019/base_chapter.html
@@ -17,9 +17,12 @@
 {% block comments %}comentarios{% endblock %}
 {% block queries %}Ver consultas{% endblock %}
 {% block results %}Ver resultados{% endblock %}
-{% block written_by %}Escrito por{% endblock %}
-{% block reviewed_by %}Revisado por{% endblock %}
-{% block translated_by %}Traducido por{% endblock %}
+{% block written_by_before %}Escrito por{% endblock %}
+{% block reviewed_by_before %}Revisado por{% endblock %}
+{% block translated_by_before %}Traducido por{% endblock %}
+{% block written_by_after %}{% endblock %}
+{% block reviewed_by_after %}{% endblock %}
+{% block translated_by_after %}{% endblock %}
 
 {% block author %}Autor(a){% endblock %}
 {% block authors %}Autores{% endblock %}
