--- a/src/templates/ja/2019/base.html
+++ b/src/templates/ja/2019/base.html
@@ -41,6 +41,8 @@
 {% block open_the_index %}目次を開く{% endblock %}
 {% block close_the_index %}目次を閉じる{% endblock %}
 
+{% block and %} と {% endblock %}
+
 {% block open %}開く{% endblock %}
 {% block close %}閉じる{% endblock %}
 
