--- a/src/templates/ja/2019/base_chapter.html
+++ b/src/templates/ja/2019/base_chapter.html
@@ -17,9 +17,12 @@
 {% block comments %}コメント{% endblock %}
 {% block queries %}クエリを表示{% endblock %}
 {% block results %}結果を表示{% endblock %}
-{% block written_by %}によって書かれた{% endblock %}
-{% block reviewed_by %}によってレビュー{% endblock %}
-{% block translated_by %}によって翻訳された{% endblock %}
+{% block written_by_before %}{% endblock %}
+{% block reviewed_by_before %}{% endblock %}
+{% block translated_by_before %}{% endblock %}
+{% block written_by_after %}によって書かれた。{% endblock %}
+{% block reviewed_by_after %}によってレビュ。{% endblock %}
+{% block translated_by_after %}によって翻訳された。{% endblock %}
 
 {% block author %}著者{% endblock %}
 {% block authors %}著者{% endblock %}
