--- a/src/templates/base/2019/base_chapter.html
+++ b/src/templates/base/2019/base_chapter.html
@@ -73,26 +73,26 @@ window.discussion_url="https://discuss.httparchive.org/t/{{ metadata.get('discus
 
 
 {% macro render_byline() %}
-  <div class="byline">{{ self.written_by() }}
+  <div class="byline">{{ self.written_by_before() }}
   {% for author in metadata.get('authors') %}
     <a class="author" href="{{ url_for('contributors', year=year, lang=lang, _anchor=author) }}">{{ config.contributors[author].name if author in config.contributors else author }}</a>{% if loop.index != loop.length and loop.length != 2 %},{% endif %}
-    {% if loop.index == loop.length - 1 %} and{% endif %}
-  {% endfor %}
+    {% if loop.index == loop.length - 1 %}{{ self.and() }}{% endif %}
+  {% endfor %}{{ self.written_by_after() }}
   </div>
 
-  <div class="byline reviewers">{{ self.reviewed_by() }}
+  <div class="byline reviewers">{{ self.reviewed_by_before() }}
   {% for reviewer in metadata.get('reviewers') %}
     <a class="reviewer" href="{{ url_for('contributors', year=year, lang=lang, _anchor=reviewer) }}">{{ config.contributors[reviewer].name if reviewer in config.contributors else reviewer }}</a>{% if loop.index != loop.length and loop.length != 2 %},{% endif %}
-    {% if loop.index == loop.length - 1 %} and{% endif %}
-  {% endfor %}
+    {% if loop.index == loop.length - 1 %}{{ self.and() }}{% endif %}
+  {% endfor %}{{ self.reviewed_by_after() }}
   </div>
 
   {% if metadata.get('translators') | length >= 1 %}
-  <div class="byline translators">{{ self.translated_by() }}
+  <div class="byline translators">{{ self.translated_by_before() }}
   {% for translator in metadata.get('translators') %}
     <a class="translator" href="{{ url_for('contributors', year=year, lang=lang, _anchor=translator) }}">{{ config.contributors[translator].name if translator in config.contributors else translator }}</a>{% if loop.index != loop.length and loop.length != 2 %},{% endif %}
-    {% if loop.index == loop.length - 1 %} and{% endif %}
-  {% endfor %}
+    {% if loop.index == loop.length - 1 %}{{ self.and() }}{% endif %}
+  {% endfor %}{{ self.translated_by_after() }}
   </div>
   {% endif %}
 {% endmacro %}
@@ -163,7 +163,7 @@ window.discussion_url="https://discuss.httparchive.org/t/{{ metadata.get('discus
             {{ self.chapter() }} {{ prev_chapter['chapter'] }}
           </span>
           <span class="chapter-title">
-              {{ prev_chapter['title'] }}
+              {{ localizedChapterTitles[prev_chapter['title']] if localizedChapterTitles[prev_chapter['title']]|length else prev_chapter['title'] }}
           </span>
       </a>
       {% else %}
@@ -173,7 +173,7 @@ window.discussion_url="https://discuss.httparchive.org/t/{{ metadata.get('discus
             {{ self.chapter() }} {{ prev_chapter['chapter'] }}
           </span>
           <span class="chapter-title">
-              {{ prev_chapter['title'] }}
+            {{ localizedChapterTitles[prev_chapter['title']] if localizedChapterTitles[prev_chapter['title']]|length else prev_chapter['title'] }}
           </span>
           <span class="not-translated">
             ({{ self.translation_not_available() }})
@@ -190,7 +190,7 @@ window.discussion_url="https://discuss.httparchive.org/t/{{ metadata.get('discus
               {{ self.chapter() }} {{ next_chapter['chapter'] }}
             </span>
             <span class="chapter-title">
-                {{ next_chapter['title'] }}
+              {{ localizedChapterTitles[next_chapter['title']] if localizedChapterTitles[next_chapter['title']]|length else next_chapter['title'] }}
             </span>
     </a>
     {% else %}
@@ -200,7 +200,7 @@ window.discussion_url="https://discuss.httparchive.org/t/{{ metadata.get('discus
               {{ self.chapter() }} {{ next_chapter['chapter'] }}
             </span>
             <span class="chapter-title">
-                {{ next_chapter['title'] }}
+              {{ localizedChapterTitles[next_chapter['title']] if localizedChapterTitles[next_chapter['title']]|length else next_chapter['title'] }}
             </span>
             <span class="not-translated">
               ({{ self.translation_not_available() }})
