--- a/src/templates/en/2019/base.html
+++ b/src/templates/en/2019/base.html
@@ -41,6 +41,8 @@
 {% block open_the_index %}Open the Table of Contents{% endblock %}
 {% block close_the_index %}Close the Table of Contents{% endblock %}
 
+{% block and %}and{% endblock %}
+
 {% block open %}Open{% endblock %}
 {% block close %}Close{% endblock %}
 
