--- a/src/templates/es/2019/base.html
+++ b/src/templates/es/2019/base.html
@@ -41,6 +41,8 @@
 {% block open_the_index %}Abrir la tabla de contenido{% endblock %}
 {% block close_the_index %}Cerrar la tabla de contenido{% endblock %}
 
+{% block and %}y{% endblock %}
+
 {% block open %}Abre{% endblock %}
 {% block close %}Cierra{% endblock %}
 
