--- a/src/templates/fr/2019/base.html
+++ b/src/templates/fr/2019/base.html
@@ -41,6 +41,8 @@
 {% block open_the_index %}Ouvrir la table des matières{% endblock %}
 {% block close_the_index %}Fermer la table des matières{% endblock %}
 
+{% block and %}et{% endblock %}
+
 {% block open %}Ouvrez{% endblock %}
 {% block close %}Fermez{% endblock %}
 
