--- a/src/templates/fr/2019/base_chapter.html
+++ b/src/templates/fr/2019/base_chapter.html
@@ -17,9 +17,12 @@
 {% block comments %}commentaires{% endblock %}
 {% block queries %}Afficher les requêtes{% endblock %}
 {% block results %}Voir les résultats{% endblock %}
-{% block written_by %}Écrit par{% endblock %}
-{% block reviewed_by %}Relu par{% endblock %}
-{% block translated_by %}Traduit par{% endblock %}
+{% block written_by_before %}Écrit par{% endblock %}
+{% block reviewed_by_before %}Relu par{% endblock %}
+{% block translated_by_before %}Traduit par{% endblock %}
+{% block written_by_after %}{% endblock %}
+{% block reviewed_by_after %}{% endblock %}
+{% block translated_by_after %}{% endblock %}
 
 {% block author %}Auteur·ice{% endblock %}
 {% block authors %}Auteur·ice·s{% endblock %}
