Allow up to 200% font zooming for Accessibility (#731)
* Relative font sizes and selective margin and padding

* Fix skip link

* Better way to do grid on mobile

* Fit footer on mobile (tab order and grid)

* Fix long line which breaks font zooming

* Fix font comment

* Fix typos

--- a/src/static/css/2019.css
+++ b/src/static/css/2019.css
@@ -287,6 +287,37 @@
 }
 
 /* Browser elements */
+
+/**
+ * A word on font-sizing units
+ * ---------------------------
+ * Font-sizes should in general be sized in rem (1rem usually equals 16px)
+ * This allows fonts to be resized in browser, which is better for accessibility
+ * (see https://www.w3.org/WAI/WCAG21/Understanding/resize-text.html).
+ *
+ * We can also use ems, if you wish to nest elements and scale (components), but
+ * this gets tricky quite quickly, so for the most part we use rems.
+ *
+ * We show the px value before, as a fallback for non-rem browsers and to remind
+ * us of the calculated size.
+ *
+ * Margins and paddings should be considered if the need to be relative (em or rem)
+ * or happy not to scale with fonts and want set about in px.
+ * If scaling, then in general top and bottom should scale with element (em), and
+ * left and right with root element (rem) to have consistent alignment (see 
+ * https://zellwk.com/blog/rem-vs-em/#rems-or-ems%3F for why).
+ * So we set margin like this:
+ *
+ *   h2.header {
+ *     font-size: 25px;
+ *     font-size: 1.5625rem;
+ *     margin: 14px;
+ *     margin: 0.56em 0.875rem
+ *   }
+ *
+ * and remember for the non-font elements, ems are relative to current font size (25px in above example), and rems to root (16px)
+ */
+
 body {
   font-family: 'Lato', sans-serif;
   color: #1A2B49;
@@ -294,6 +325,7 @@ body {
   font-weight: inherit;
   -webkit-font-smoothing: antialiased;
   font-size: 17px;
+  font-size: 1.0625rem;
   line-height: 1.4em;
 }
 
@@ -318,6 +350,11 @@ a:focus, a:hover {
   text-decoration: underline;
 }
 
+img {
+  max-width: 100%;
+  height: auto;
+}
+
 /* The main wrapper, center aligned */
 .container {
   max-width: 1280px;
@@ -334,7 +371,9 @@ a:focus, a:hover {
 
 .subtitle {
   font-size: 28px;
+  font-size: 1.75rem;
   line-height: 42px;
+  line-height: 1.5em;
   font-weight: bold;
 }
 
@@ -365,6 +404,7 @@ a:focus, a:hover {
 
 .title-lg {
   font-size: 48px;
+  font-size: 3rem;
 }
 
 .title-alt::before {
@@ -380,12 +420,6 @@ a:focus, a:hover {
   margin-right: auto;
 }
 
-@media (max-width: 600px) {  
-  .title-lg {
-    font-size: 40px;
-  }
-}
-
 @media (max-width: 900px) {
   .title-alt::before {
     margin-left: auto;
@@ -395,16 +429,20 @@ a:focus, a:hover {
 
 h2.header {
   font-size: 25px;
+  font-size: 1.5625rem;
   margin: 14px;
+  margin: 0.56em 0.875rem
 }
 
 .btn {
   border: 1px solid #1A2B49;
   border-radius: 50px;
   padding: 15px 30px;
+  padding: 1.07em 1.875rem;
   background: #1A2B49;
   color: #FFFFFF;
   font-size: 14px;
+  font-size: 0.875rem;
   text-decoration: none;
 }
 .btn:hover,
@@ -516,6 +554,7 @@ header .btn + .language-switcher {
   align-items: center;
   position: relative;
   font-size: 14px;
+  font-size: 0.875rem;
 }
 
 .language-switcher select,
@@ -565,6 +604,7 @@ header .btn + .language-switcher {
 .main {
   margin: 0px auto;
   font-size: 17px;
+  font-size: 1.0625rem;
 }
 
 .main a,
@@ -583,6 +623,7 @@ h4 code {
 
 p, td, th, code, li {
   font-size: 17px;
+  font-size: 1.0625rem;
   line-height: 1.5em;
 }
 
@@ -598,6 +639,7 @@ blockquote {
   position: relative;
   font-style: italic;
   font-size: 19px;
+  font-size: 1.1875rem;
 }
 
 blockquote::before {
@@ -636,6 +678,9 @@ footer .nav-items {
   display: flex;
   justify-content: flex-end;
   align-items: center;
+}
+footer .mobile-ha-social-media {
+  display: none;
 }
 footer .ha-logo {
   grid-area: ha-logo;
@@ -677,6 +722,7 @@ footer hr:last-of-type {
 p.copyright {
   margin: 0;
   font-size: 16px;
+  font-size: 1rem;
   color: #F2F2F2;
 }
 p.copyright a {
@@ -724,7 +770,9 @@ p.copyright a {
   }
   header nav > ul > li > a {
     margin-bottom: 50px;
+    margin-bottom: 3.125rem;
     font-size: 16px;
+    font-size: 1rem;
     line-height: 1.4em
   }
   header nav > ul > li:last-child {
@@ -800,6 +848,7 @@ p.copyright a {
     margin-left: 0;
     margin: 20px 0px;
     font-size: 16px;
+    font-size: 1rem;
   }
   footer hr {
     margin: 20px 0px;
@@ -827,6 +876,7 @@ p.copyright a {
   padding: 6px;
   position: absolute;
   top: -40px;
+  top: -2.35em;
   left: 0px;
   color: white;
   border-right: 1px solid white;
@@ -850,9 +900,21 @@ p.copyright a {
 
 /* Mobile View */
 @media (max-width: 600px) {
-   body, p, td, th, code, li {
-     font-size: 16px;
-   }
+  body, p, td, th, code, li {
+    font-size: 16px;
+    font-size: 1rem;
+  }
+
+  .title-lg {
+    font-size: 40px;
+    font-size: 2.5rem;
+    font-size: min(2.5rem,15vw); /* Cap max font size on mobile, if possible. Allows 200% font-size. */
+  }
+
+  h2 {
+    font-size: min(1.5rem,12vw); /* Cap max font size on mobile, if possible. Allows 200% font-size. */
+  }
+
   /* Header */
   .top-header, footer {
     position: relative;
@@ -865,6 +927,7 @@ p.copyright a {
   }
   a.navigation-logo {
     min-width: auto;
+    max-width: 75vw;
   }
   header nav > ul > li > * {
     margin: 0;
@@ -872,6 +935,7 @@ p.copyright a {
   header nav > ul > li > a {
     margin-bottom: 50px;
     font-size: 16px;
+    font-size: 1rem;
     line-height: 1.4em
   }
   header nav > ul > li:last-child {
@@ -920,24 +984,31 @@ p.copyright a {
     margin-top: 20px;
   }
 
+  .main {
+    display: block;
+  }
+
   /* Footer */
   footer {
     grid-template-areas:
-      'home-logo language-switcher'
-      'hr hr'
-      'nav-items nav-items'
-      'ha-logo  social-media'
-      'hr-last hr-last'
-      'copyright copyright';
-    grid-template-columns: 1fr 120px 0 0;
+      'home-logo'
+      'hr'
+      'nav-items'
+      'ha-social-media'
+      'hr-last'
+      'copyright';
+    grid-template-columns: 1fr;
     grid-template-rows: auto;
   }
   footer .home-logo {
     grid-area: home-logo;
     margin: 20px 0px;
   }
-  footer .home-logo > img {
-    max-width: 40vw;
+  footer .mobile-ha-social-media {
+    display: grid;
+    grid-area: ha-social-media;
+    grid-template-areas:
+      'ha-logo social-media';
   }
   footer .ha-logo {
     grid-area: ha-logo;
@@ -962,12 +1033,14 @@ p.copyright a {
     margin-left: 0;
     margin: 20px 0px;
     font-size: 16px;
+    font-size: 1rem;
   }
   footer .language-switcher {
     grid-area: language-switcher;
   }
   p.copyright {
     font-size: 12px;
+    font-size: 0.75rem;
   }
   footer .copyright {
     grid-area: copyright;
@@ -984,5 +1057,9 @@ p.copyright a {
   }
   footer hr:last-of-type {
     display: block;
+  }
+
+  .not-mobile {
+    display: none !important;
   }
 }
