--- a/src/templates/base/2019/contributors.html
+++ b/src/templates/base/2019/contributors.html
@@ -106,7 +106,9 @@
   text-align: center;
   font-style: italic;
   font-size: 17px;
+  font-size: 1.0625rem;
   margin-bottom: 10px;
+  margin-bottom: 0.588em;
 }
 
 .contributor-social {
@@ -126,6 +128,7 @@
 
 .contributor-team {
   font-size: 14px;
+  font-size: 0.875rem;
   color: #757575;
 }
 .contributor-team::after {
