Misc fixes for accessibility translations (#760)

--- a/src/templates/fr/2019/featured_chapters.html
+++ b/src/templates/fr/2019/featured_chapters.html
@@ -37,7 +37,7 @@
   {%- set featured_chapter_quote = "As the web grows in capabilities and allows access to more and more sensitive data, it becomes increasingly important for developers to adopt web security features to protect their applications. The security features reviewed in this chapter are defenses built into the web platform itself, available to every web author." %}
   {%- set featured_chapter_stats = {"stat1":"79%","label1":"Sites using HTTPS","stat2":"41%","label2":"Sites using TLSv1.3","stat3":"4.43%","label3":"Sites using CSP"} %}
 {%- elif featured_chapter == "accessibility" %}
-  {%- set featured_chapter_name = "Accessibility" %}
+  {%- set featured_chapter_name = "Accessibilité" %}
   {%- set featured_chapter_quote = "L’accessibilité sur le web est essentielle pour une société inclusive et équitable. Alors que nos vies sociales et professionnelles se déplacent de plus en plus vers le monde en ligne, il devient encore plus important pour les personnes handicapées de pouvoir participer à toutes les interactions en ligne sans barrières. Tout comme les architectes en bâtiment peuvent créer ou omettre des fonctionnalités d’accessibilité telles que des rampes pour fauteuils roulants, les développeurs et développeuses web peuvent aider ou entraver la technologie d’assistance sur laquelle les utilisateurs se basent." %}
   {%- set featured_chapter_stats = {"stat1":"22 %","label1":"Sites ayant des contrastes de couleurs insuffisants","stat2":"50 %","label2":"Sites ayant des attributs alt manquants","stat3":"14 %","label3":"Sites utilisant des liens d’évitement"} %}
 {%- elif featured_chapter == "seo" %}
