--- a/src/templates/ja/2019/contributors.html
+++ b/src/templates/ja/2019/contributors.html
@@ -2,14 +2,14 @@
 
 {% block title %}2019 貢献者 | HTTP ArchiveによるWeb Almanac{% endblock %}
 
-{% block description %}The {{ config.contributors.items() | length }} people who contributed to the 2019 Web Almanac as Analysts, Authors, Brainstormers, Designers, Developers, Editors, Reviewers and Translators.{% endblock %}
+{% block description %}The {{ config.contributors.items() | length }} アナリスト、著者、ブレインストーマー、デザイナー、開発者、編集者、レビュアー、翻訳者として2019年のWeb Almanacに貢献した人々。{% endblock %}
 
 {% block date_published %}2019-11-04T12:00:00+00:00:00{% endblock %}
 {% block date_modified %}2019-11-04T12:00:00+00:00:00{% endblock %}
 
 {% block breadcrumb_name_2 %}{{ year }} 貢献者{% endblock %}
 
-{% block filter_by_team %}Filter by team: <span id="filtered-contributors">{{ self.contributors() }}</span><span id="contributors-total-text" class="hidden"> of <span id="contributors-total">{{ config.contributors.items() | length }}</span></span> contributors.{% endblock %}
+{% block filter_by_team %}チームでフィルタリング： <span id="filtered-contributors">{{ self.contributors() }}</span><span id="contributors-total-text" class="hidden"> の <span id="contributors-total">{{ config.contributors.items() | length }}</span></span> 貢献者。{% endblock %}
 
-{% block join_the_team_title%}Join the Web Almanac team{% endblock %}
-{% block join_the_team_text%}Join the team!{% endblock %}
+{% block join_the_team_title%}Web Almanacチームに参加しましょう{% endblock %}
+{% block join_the_team_text%}チームに参加しよう！{% endblock %}
