--- a/src/templates/ja/2019/featured_chapters.html
+++ b/src/templates/ja/2019/featured_chapters.html
@@ -1,4 +1,4 @@
-{%- set featured_chapter = ("css","markup","media","third-parties","fonts","performance","security","accessibility","seo","pwa","mobile-web","ecommerce","cms","compression","caching","cdn","page-weight","resource-hints","http2") | random %}
+{%- set featured_chapter = ("javascript","css","markup","media","third-parties","fonts","performance","security","accessibility","seo","pwa","mobile-web","ecommerce","cms","compression","caching","cdn","page-weight","resource-hints","http2") | random %}
 {#
   Below is the full set of chapters. If all are translated then replace above line with this one.
   Other than add chapters to above first line as they are translated (min of two chapters so repeat if only one chapter)
