--- a/src/static/css/page.css
+++ b/src/static/css/page.css
@@ -1,6 +1,8 @@
 .main {
+  display: -ms-grid;
   display: grid;
   grid-template-areas: 'index content';
+  -ms-grid-columns: 300px calc(100% - 300px);
   grid-template-columns: 300px auto;
   grid-template-columns: 300px calc(100% - 300px); /* auto sometimes not set correctly on font zoom */
 }
@@ -42,6 +44,7 @@
 
 .index {
   grid-area: index;
+  -ms-grid-column: 1;
 }
 .index .index-box {
   margin: 20px 0;
@@ -129,6 +132,7 @@
 
 .content {
   grid-area: content;
+  -ms-grid-column: 2;
   margin-left: 40px;
   min-width: 320px;
 }
@@ -394,6 +398,7 @@ figure .fig-desktop {
 
 @media (max-width: 900px) {
   .main {
+    -ms-grid-columns: 1fr;
     grid-template-areas:
       'index'
       'content';
@@ -401,11 +406,15 @@ figure .fig-desktop {
     grid-template-columns: 100%; /* auto sometimes not set correctly on font zoom */
   }
   .main .content {
+    -ms-grid-row: 2;
+    -ms-grid-column: 1;
     margin-left: 0;
   }
   .index {
+    -ms-grid-row: 1;
     margin: 30px 0;
   }
+
   .index-box .header {
     display: flex;
     justify-content: space-between;
