--- a/src/templates/base/2019/base.html
+++ b/src/templates/base/2019/base.html
@@ -120,8 +120,10 @@
           </ul>
         </nav>
         <nav aria-label="{{ self.menu_title() }}" id="menu" aria-labelledby="menu-btn">
-          <button type="button" id="menu-btn" class="menu-btn" aria-label="{{ self.open_the_menu() }}" aria-expanded="false" data-open-text="{{ self.open_the_menu() }}" data-close-text="{{ self.close_the_menu() }}">
-            <img class="menu-icon" src="/static/images/menu.png" data-src-close="/static/images/close.png" alt="" height="21" width="27" />
+          <button type="button" class="menu-btn" id="menu-btn" aria-label="{{ self.open_the_menu() }}" aria-expanded="false" data-open-text="{{ self.open_the_menu() }}" data-close-text="{{ self.close_the_menu() }}">
+            <span class="menu-btn__bar"></span>
+            <span class="menu-btn__bar"></span>
+            <span class="menu-btn__bar"></span>
           </button>
           <ul class="menu">
             <li><a href="{{ url_for('table_of_contents', year=year, lang=lang) }}">{{ self.table_of_contents_title() }}</a></li>
@@ -139,20 +141,29 @@
             <li class="misc">
               <ul class="misc">
                 <li>
-                  <a href="https://httparchive.org/">
-                    <img src="/static/images/ha-home.svg" alt="{{ self.http_archive_link() }}" height="35" width="70">
+                  <a href="https://httparchive.org/" class="navigation-logo" aria-labelledby="ha-logo-mobile">
+                    <svg width="70" height="35" role="img">
+                      <title id="ha-logo-mobile">{{ self.http_archive_link() }}</title>
+                      <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#ha"></use>
+                    </svg>
                   </a>
                 </li>
                 <li>
                   <ul class="social-media">
                     <li>
-                      <a href="https://twitter.com/HTTPArchive" class="twitter">
-                        <img src="/static/images/twitter.png" height="65" width="80" alt="Twitter" loading="lazy" />
+                      <a href="https://twitter.com/HTTPArchive" aria-labelledby="twitter-logo-mobile">
+                        <svg width="20" height="20" role="img">
+                          <title id="twitter-logo-mobile">Twitter</title>
+                          <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#twitter"></use>
+                        </svg>
                       </a>
                     </li>
                     <li>
-                      <a href="https://github.com/HTTPArchive/almanac.httparchive.org" class="github">
-                        <img src="/static/images/github.png" height="78" width="80" alt="GitHub" loading="lazy" />
+                      <a href="https://github.com/HTTPArchive/almanac.httparchive.org" aria-labelledby="github-logo-mobile">
+                        <svg width="20" height="20" role="img">
+                          <title id="github-logo-mobile">GitHub</title>
+                          <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#github"></use>
+                        </svg>
                       </a>
                     </li>
                   </ul>
@@ -190,18 +201,27 @@
         </ul>
       </nav>
       <div class="mobile-ha-social-media">
-        <a class="navigation-logo ha-logo" href="https://httparchive.org/">
-          <img src="/static/images/ha-home.svg" alt="{{ self.http_archive_link() }}" height="35" width="70">
+        <a class="navigation-logo ha-logo" href="https://httparchive.org/" aria-labelledby="httparchive-logo-footer-mobile">
+          <svg width="70" height="35" role="img">
+            <title id="httparchive-logo-footer-mobile">{{ self.http_archive_link() }}</title>
+            <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#ha"></use>
+          </svg>
         </a>
         <ul class="social-media">
           <li>
-            <a href="https://twitter.com/HTTPArchive" class="twitter">
-              <img src="/static/images/twitter.png" alt="Twitter" height="65" width="80" loading="lazy" />
+            <a href="https://twitter.com/HTTPArchive" aria-labelledby="twitter-logo-footer-mobile">
+              <svg width="20" height="20" role="img">
+                <title id="twitter-logo-footer-mobile">Twitter</title>
+                <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#twitter"></use>
+              </svg>
             </a>
           </li>
           <li>
-            <a href="https://github.com/HTTPArchive/almanac.httparchive.org" class="github">
-              <img src="/static/images/github.png" alt="GitHub" height="78" width="80" loading="lazy" />
+            <a href="https://github.com/HTTPArchive/almanac.httparchive.org" aria-labelledby="github-logo-footer-mobile">
+              <svg width="20" height="20" role="img">
+                <title id="github-logo-footer-mobile">GitHub</title>
+                <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#github"></use>
+              </svg>
             </a>
           </li>
         </ul>
@@ -212,18 +232,27 @@
         <br>
         <a href="{{ url_for('accessibility_statement', lang=lang) }}">{{ self.accessibility_statement() }}</a>
       </p>
-      <a class="navigation-logo ha-logo not-mobile" href="https://httparchive.org/">
-        <img src="/static/images/ha-home.svg" alt="{{ self.http_archive_link() }}" height="35" width="70">
+      <a class="navigation-logo ha-logo not-mobile" href="https://httparchive.org/" aria-labelledby="ha-logo-footer">
+        <svg width="70" height="35" role="img">
+          <title id="ha-logo-footer">{{ self.http_archive_link() }}</title>
+          <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#ha"></use>
+        </svg>        
       </a>
       <ul class="social-media not-mobile">
         <li>
-          <a href="https://twitter.com/HTTPArchive" class="twitter">
-            <img src="/static/images/twitter.png" alt="Twitter" height="65" width="80" loading="lazy" />
+          <a href="https://twitter.com/HTTPArchive" aria-labelledby="twitter-logo-footer">
+            <svg width="20" height="20" role="img">
+              <title id="twitter-logo-footer">Twitter</title>
+              <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#twitter"></use>
+            </svg>
           </a>
         </li>
         <li>
-          <a href="https://github.com/HTTPArchive/almanac.httparchive.org" class="github">
-            <img src="/static/images/github.png" alt="GitHub" height="78" width="80" loading="lazy" />
+          <a href="https://github.com/HTTPArchive/almanac.httparchive.org" aria-labelledby="github-logo-footer">
+            <svg width="20" height="20" role="img">
+              <title id="github-logo-footer">GitHub</title>
+              <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#github"></use>
+            </svg>
           </a>
         </li>
       </ul>
@@ -246,15 +275,12 @@
         }
 
         // Mobile menu
-        var menuIcon = document.querySelector('.menu-icon');
-        var menuIconInitialSrc = document.querySelector('.menu-icon').src;
-        var menuIconSrcClose = document.querySelector('.menu-icon').dataset.srcClose;
         var menuBtn = document.querySelector('.menu-btn');
         var menuNav = document.querySelector('#menu');
 
         function toggleNavMenu() {
           var menuOpen = document.body.classList.toggle('menu-open');
-          menuIcon.src = menuOpen ? menuIconSrcClose : menuIconInitialSrc;
+          menuBtn.classList.toggle("menu-btn--active");
           menuBtn.setAttribute('aria-expanded', menuOpen);
           var ariaLabel = menuOpen ?  menuBtn.getAttribute('data-close-text') : menuBtn.getAttribute('data-open-text');
           menuBtn.setAttribute('aria-label', ariaLabel);
@@ -310,7 +336,6 @@
       {{ self.help_translate() }}
     </option>
   </select>
-  <img class="dropdown-arrow" src="/static/images/dropdown-arrow.png" alt="{{ self.open() }}" height="20" width="20" />
 </div>
 {% endmacro %}
 
@@ -326,7 +351,6 @@
         </option>
       {% endfor %}
   </select>
-  <img class="dropdown-arrow" src="/static/images/dropdown-arrow.png" alt="{{ self.open() }}" height="20" width="20" />
 </div>
 {% endmacro %}
 
