--- a/src/templates/base/2019/base_chapter.html
+++ b/src/templates/base/2019/base_chapter.html
@@ -61,13 +61,24 @@ window.discussion_url="https://discuss.httparchive.org/t/{{ metadata.get('discus
 {# Calls to action for readers who want to engage more with this chapter. #}
 {% macro render_actions() %}
   <a class="alt btn" href="https://discuss.httparchive.org/t/{{ metadata.get('discuss') }}">
-    <img src="/static/images/discuss.png" alt="{{ self.discuss_this_chapter() }}" height="24" width="24" loading="lazy" /><span id="num_comments"></span> <span data-translation id="comment-singular">{{ self.comment() }}</span><span data-translation id="comment-plural">{{ self.comments() }}</span>
+    <svg width="18" height="18" role="img">
+      <title>{{ self.discuss_this_chapter() }}</title>
+      <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#comment"></use>
+    </svg>    
+    <span id="num_comments"></span> <span data-translation id="comment-singular">{{ self.comment() }}</span>
+    <span data-translation id="comment-plural">{{ self.comments() }}</span>
   </a>
   <a class="alt btn" href="{{ metadata.get('results') }}/">
-    <img src="/static/images/results.png" alt="" height="24" width="24" loading="lazy" />{{ self.results() }}
+    <svg width="18" height="18" role="img" aria-hidden="true">
+      <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#bar-chart"></use>
+    </svg>       
+    {{ self.results() }}
   </a>
   <a class="alt btn" href="https://github.com/HTTPArchive/almanac.httparchive.org/tree/master/sql/{{ year }}/{{ metadata.get('queries')  }}/">
-    <img src="/static/images/queries.png" alt="" height="24" width="24" loading="lazy" />{{ self.queries() }}
+    <svg width="18" height="18" role="img" aria-hidden="true">
+      <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#sql"></use>
+    </svg>   
+    {{ self.queries() }}
   </a>
 {% endmacro %}
 
@@ -121,13 +132,28 @@ window.discussion_url="https://discuss.httparchive.org/t/{{ metadata.get('discus
               {% if authordata.twitter or authordata.github %}
                   <span class="social">
                   {% if authordata.twitter %}
-                  <a class="twitter" href="https://twitter.com/{{ authordata.twitter }}"><img src="/static/images/twitter.png" alt="{{ onTwitter(authordata.twitter) }}" height="65" width="80" loading="lazy" /></a>
+                  <a class="twitter" href="https://twitter.com/{{ authordata.twitter }}" aria-labelledby="author_{{ authordata.twitter }}">
+                    <svg width="18" height="18" role="img">
+                      <title id="author_{{ authordata.twitter }}">{{ onTwitter(authordata.twitter) }}</title>
+                      <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#twitter"></use>
+                    </svg>
+                  </a>
                   {% endif %}
                   {% if authordata.github %}
-                  <a class="github" href="https://github.com/{{ authordata.github }}"><img src="/static/images/github.png" alt="{{ onGitHub(authordata.github) }}" height="78" width="80" loading="lazy" /></a>
+                  <a class="github" href="https://github.com/{{ authordata.github }}" aria-labelledby="author_{{ authordata.github }}">
+                    <svg width="18" height="18" role="img">
+                      <title id="author_{{ authordata.github }}">{{ onGitHub(authordata.github) }}</title>
+                      <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#github"></use>
+                    </svg>
+                  </a>
                   {% endif %}
                   {% if authordata.website %}
-                  <a class="website" href="{{ authordata.website }}"><img src="/static/images/blog.png" alt="{{ website(authordata.name) }}" height="72" width="72" loading="lazy" /></a>
+                  <a class="website" href="{{ authordata.website }}" aria-labelledby="author_{{ author }}_website">
+                    <svg width="18" height="18" role="img">
+                      <title id="author_{{ author }}_website">{{ website(authordata.name) }}</title>
+                      <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#globe"></use>
+                    </svg>
+                  </a>
                   {% endif %}
                   </span>
               {% endif %}
