--- a/src/templates/base/2019/index.html
+++ b/src/templates/base/2019/index.html
@@ -21,7 +21,7 @@
 
 {% block styles %}
   {{ super() }}
-  <link rel="stylesheet" href="/static/css/index.css">
+  <link rel="stylesheet" href="/static/css/index.css?v=2">
 {% endblock %}
 
 {% block contributors %}{{ config.contributors.keys() | length }}{% endblock %}
