Add CSS incrementer GitHub action (#802)
* Add CSS incrementer GitHub action

* Remove project

* Add year dir

* Handle both base and year htmls

--- a/src/templates/ja/2019/splash.html
+++ b/src/templates/ja/2019/splash.html
@@ -6,7 +6,7 @@ HTTP ArchiveによるWeb Almanac
 
 {% block styles %}
   {{ super() }}
-  <link rel="stylesheet" href="/static/css/splash.css">
+  <link rel="stylesheet" href="/static/css/splash.css?v=1">
 {% endblock %}
 
 {% block main %}
