Fench Organization translation (#807)

--- a/src/templates/fr/2019/base.html
+++ b/src/templates/fr/2019/base.html
@@ -12,7 +12,7 @@
 
 {% block skip_navigation %}Sauter la navigation{% endblock %}
 
-{% block organization %}Web Almanac by HTTP Archive{% endblock %}
+{% block organization %}Web Almanac par HTTP Archive{% endblock %}
 
 {% block http_archive_link %}HTTP Archive home{% endblock %}
 
