--- a/src/templates/base/2019/base_chapter.html
+++ b/src/templates/base/2019/base_chapter.html
@@ -132,17 +132,17 @@ window.discussion_url="https://discuss.httparchive.org/t/{{ metadata.get('discus
               {% if authordata.twitter or authordata.github %}
                   <span class="social">
                   {% if authordata.twitter %}
-                  <a class="twitter" href="https://twitter.com/{{ authordata.twitter }}" aria-labelledby="author_{{ authordata.twitter }}">
+                  <a class="twitter" href="https://twitter.com/{{ authordata.twitter }}" aria-labelledby="author_{{ author }}_twitter">
                     <svg width="18" height="18" role="img">
-                      <title id="author_{{ authordata.twitter }}">{{ onTwitter(authordata.twitter) }}</title>
+                      <title id="author_{{ author }}_twitter">{{ onTwitter(authordata.twitter) }}</title>
                       <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#twitter"></use>
                     </svg>
                   </a>
                   {% endif %}
                   {% if authordata.github %}
-                  <a class="github" href="https://github.com/{{ authordata.github }}" aria-labelledby="author_{{ authordata.github }}">
+                  <a class="github" href="https://github.com/{{ authordata.github }}" aria-labelledby="author_{{ author }}_github">
                     <svg width="18" height="18" role="img">
-                      <title id="author_{{ authordata.github }}">{{ onGitHub(authordata.github) }}</title>
+                      <title id="author_{{ author }}_github">{{ onGitHub(authordata.github) }}</title>
                       <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#github"></use>
                     </svg>
                   </a>
